cabal-version:      3.0
name:               nsa
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           nsa.martinstyve.no
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             martinstyve
maintainer:         martin.styve@icloud.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable nsa
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, nsa
    hs-source-dirs:   app
    default-language: Haskell2010

library
    import: warnings
    hs-source-dirs: src
    exposed-modules:
     VDOT
     PaceRange
 build-depends: base


